[gd_scene load_steps=10 format=2]

[ext_resource path="res://ASSETS/Pies/MincePieIdle0.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/Pies/MincePieIdle1.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/Pies/MincePieIdle3.png" type="Texture" id=3]
[ext_resource path="res://MincePie.gd" type="Script" id=4]
[ext_resource path="res://ASSETS/Assets/soundsandmusic/sounds/powerUp2.ogg" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "shine",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 10 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 8 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "bounce"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 8 ), Vector2( 0, -96 ), Vector2( 0, -32 ) ]
}

[node name="MincePie" type="Area2D"]
collision_layer = 0
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 8 )
scale = Vector2( 1, 1.5 )
frames = SubResource( 1 )
animation = "shine"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/bounce = SubResource( 4 )

[node name="SoundPieCollect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
pitch_scale = 1.5

[connection signal="body_entered" from="." to="." method="_on_MincePie_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
